<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<LinearLayout
		android:id="@+id/foldersync_detail"
		style="?android:attr/textAppearanceLarge"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="16dp" >

		<EditText
			android:id="@+id/edit_alias"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/syncAlias" />

		<Button
			android:id="@+id/button_source"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/syncSource" />

		<Button
			android:id="@+id/button_destination"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/syncDestination" />

		<CheckBox
			android:id="@+id/check_includeSubDirs"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/syncIncludeSubDirs" />

		<CheckBox
			android:id="@+id/check_moveFiles"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/syncMoveFiles" />
	</LinearLayout>

</ScrollView>